--- a/manifest.json
+++ b/manifest.json
@@ -1,20 +1,8 @@
 {
-  "name": "Lista de Mantenimiento",
+  "name": "Registro de Mantenimiento",
   "short_name": "Mantenimiento",
-  "start_url": ".",
+  "start_url": "./index.html",
   "display": "standalone",
   "background_color": "#c7c7c7",
-  "theme_color": "#333333",
-  "icons": [
-    {
-      "src": "icon.png",
-      "sizes": "192x192",
-      "type": "image/png"
-    },
-    {
-      "src": "icon.png",
-      "sizes": "512x512",
-      "type": "image/png"
-    }
-  ]
+  "theme_color": "#333333"
 }
